<resources>
    <string name="app_name">PiWeb</string>
    <string name="sample_mainactivity_name">PiWeb</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="characteristics">Characteristics</string>
    <string name="measurement_points">Measurement Points</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="measurements">Measurements</string>
    <string name="measurement">Measurement</string>
    <string name="measurementsExtra">measurements_extra</string>
    <string name="_11_july_2017">11 July 2017</string>
    <string name="_30_november_2017">30 November 2017</string>
    <string name="dateExtra">date_extra</string>
    <string name="operatorExtra">operator_extra</string>
    <string name="batchExtra">batch_extra</string>
    <string name="measurementExtra">measurement_extra</string>
</resources>
