<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
                app:cardElevation="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <com.google.ar.sceneform.SceneView
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@android:color/white"
                        android:id="@+id/rotating_model_view"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"/>

                <View
                        android:alpha="0.3"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                <FrameLayout
                        android:id="@+id/measurement_points_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/card_foreground"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/characteristics_count_tv"
                                android:layout_gravity="center_horizontal"
                                android:textSize="22dp"
                                android:textColor="@android:color/black"
                                android:text="-"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/characteristics"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_gravity="right"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/measurement_points_count_tv"
                                android:layout_gravity="center_horizontal"
                                android:textSize="22dp"
                                android:textColor="@android:color/black"
                                android:text="-"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/measurement_points"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                app:cardElevation="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <FrameLayout
                        android:id="@+id/all_measurements_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/card_foreground"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/measurement_count_tv"
                                android:layout_gravity="center_horizontal"
                                android:textSize="22dp"
                                android:textColor="@android:color/black"
                                android:text="1'000+"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:text="@string/measurements"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_gravity="right|center_vertical"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <TextView
                                    android:layout_gravity="top"
                                    android:textSize="12dp"
                                    android:text="@string/oldest"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            <TextView
                                    android:id="@+id/oldest_date_tv"
                                    android:layout_marginLeft="10dp"
                                    android:textColor="@android:color/black"
                                    android:textSize="12dp"
                                    android:text="@string/_11_july_2017"
                                    android:gravity="right"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <TextView
                                    android:gravity="right"
                                    android:layout_gravity="bottom"
                                    android:textSize="12dp"
                                    android:text="@string/newest"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>

                            <TextView
                                    android:id="@+id/newest_date_tv"
                                    android:layout_marginLeft="10dp"
                                    android:textColor="@android:color/black"
                                    android:textSize="12dp"
                                    android:text="@string/_30_november_2017"
                                    android:gravity="right"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

                <View
                        android:alpha="0.3"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                <FrameLayout
                        android:id="@+id/latest_measurements_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/card_foreground"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:layout_gravity="center_horizontal|start"
                                android:textSize="18dp"
                                android:textColor="@android:color/black"
                                android:text="Latest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:textSize="12dp"
                                android:text="date sample"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <ImageView
                            android:id="@+id/latest_measurements_chart"
                            android:src="@drawable/hardcoded_img"
                            android:layout_gravity="right|center_vertical"
                            android:layout_width="40dp"
                            android:layout_height="10dp" app:srcCompat="@drawable/hardcoded_img"/>


                </FrameLayout>

                <View
                        android:alpha="0.3"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                <FrameLayout
                        android:id="@+id/last_day_measurements_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/card_foreground"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/last_day_measurements_tv"
                                android:layout_gravity="center_horizontal|start"
                                android:textSize="18dp"
                                android:textColor="@android:color/black"
                                android:text="Last Day, measurements count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:textSize="12dp"
                                android:text="date sample"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <ImageView
                            android:id="@+id/last_day_measurements_chart"
                            android:src="@drawable/hardcoded_img"
                            android:layout_gravity="right|center_vertical"
                            android:layout_width="40dp"
                            android:layout_height="10dp"/>


                </FrameLayout>

                <View
                        android:alpha="0.3"
                        android:layout_marginLeft="30dp"
                        android:background="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                <FrameLayout
                        android:id="@+id/last_week_measurements_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="@drawable/card_foreground"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:layout_gravity="start"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/last_week_measurements_tv"
                                android:layout_gravity="center_horizontal|start"
                                android:textSize="18dp"
                                android:textColor="@android:color/black"
                                android:text="Last week, measurements count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:textSize="12dp"
                                android:text="date sample"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <ImageView
                            android:id="@+id/last_week_measurements_chart"
                            android:src="@drawable/hardcoded_img"
                            android:layout_gravity="right|center_vertical"
                            android:layout_width="40dp"
                            android:layout_height="10dp"/>


                </FrameLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>